Sun Jan 22 18:01:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_skel.mpc:
        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_stub.mpc:
          Install fixes

Sat Jan 21 14:40:46 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/ami4ccm/ami4ccm.mpc:
          Reduced number of files generated

Sat Jan 21 14:40:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_stub.mpc:
          Change install

Sat Jan 21 12:15:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/dds4ccm_skel.mpc:
        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_stub.mpc:
          Added missing files

Fri Jan 20 10:31:19 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/dds4ccm_stub.mpc:
        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_lem_stub.mpc:
        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_stub.mpc:
          Reduced the amount of files being generated

Fri Jan 20 10:08:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_lem_stub.mpc:
        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_skel.mpc:
        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_stub.mpc:
          Reduced the amount of files being generated

Fri Jan 20 09:58:21 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/dds4ccm_lem_stub.mpc:
        * connectors/dds4ccm/idl/dds4ccm_skel.mpc:
        * connectors/dds4ccm/idl/dds4ccm_stub.mpc:
          Reduced the amount of files being generated

Fri Jan 20 09:28:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/dds4ccm_stub.mpc:
          Use new -Ssvcp and -Ssvtp

Thu Dec 29 20:00:39 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/DDS_Sender/Hello_Sender.cpp: